feat: add stats api (#31)
